--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # database
-spring.datasource.url= jdbc:mysql://localhost:3306/portfolio?characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+spring.datasource.url= jdbc:mysql://uei1l4flt0wp3pdb:TyBEBwEFrtqf9YWG7cZW@bvqfbkeay42npfkuevre-mysql.services.clever-cloud.com:3306/bvqfbkeay42npfkuevre
 
 # actualizar base de datos y crear entidades
 spring.jpa.hibernate.ddl-auto= update
 
 # user
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=uei1l4flt0wp3pdb
+spring.datasource.password=TyBEBwEFrtqf9YWG7cZW
 
 # hibernate genera SQL optimizado
 spring.jpa.database-platform= org.hibernate.dialect.MySQL8Dialect
